// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload renders normally with multiple files props 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          test.jpg (10 kB)
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="iconWrapper critical"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  height="24"
                  width="24"
                />
                <polygon
                  fill="currentColor"
                  points="18 7.5 13.5 12 18 16.5 16.5 18 12 13.5 7.5 18 6 16.5 10.5 12 6 7.5 7.5 6 12 10.5 16.5 6"
                />
              </g>
            </svg>
          </div>
        </button>
      </li>
    </ul>
    <div
      class="row"
    >
      <div
        class="field"
      >
        <input
          class="input"
          id="multiple"
          multiple=""
          type="file"
        />
        <button
          class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS Button-module_theme-coat__2_3U7 button_hds-button--theme-coat__12cO0 Button-module_size-small__3lizH button_hds-button--small__2NFef"
          type="button"
        >
          <span
            class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
          >
            Lisää...
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload renders normally with single file props 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <ul
      class="list standard noBullets"
    >
      <li
        class="fileListItem"
      >
        <span
          class="text brand span fileName"
        >
          test.jpg (10 kB)
        </span>
        <button
          class="delete"
          type="button"
        >
          <div
            class="iconWrapper critical"
          >
            <svg
              class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <rect
                  height="24"
                  width="24"
                />
                <polygon
                  fill="currentColor"
                  points="18 7.5 13.5 12 18 16.5 16.5 18 12 13.5 7.5 18 6 16.5 10.5 12 6 7.5 7.5 6 12 10.5 16.5 6"
                />
              </g>
            </svg>
          </div>
        </button>
      </li>
    </ul>
    <div
      class="row"
    >
      <div
        class="field"
      >
        <input
          class="input"
          id="single"
          type="file"
        />
        <button
          class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS Button-module_theme-coat__2_3U7 button_hds-button--theme-coat__12cO0 Button-module_size-small__3lizH button_hds-button--small__2NFef"
          type="button"
        >
          <span
            class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
          >
            Valitse...
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
